Fix overflow on contact form

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -185,6 +185,10 @@
   --tw-bg-opacity: 0.5;
 }
 
+.support-modal-content{
+   overflow: scroll ;
+}
+
 /* SUPPORT MODAL*/
 :root {
   --primary-color: #005fff;
